@@ -19,6 +19,7 @@
 * Client: Do not talk to peers that provide no NETWORK servive (at least the limited one)
 * Client: Do not talk to peers that send nonce filled with zeros
 * Client: The friends file allows to define hostnames and user agents that are automatically marked as special
+* Client: Services field report NETWORK_LIMITED (instead of NETWORK) if config's "Memory.DataFilesKeep" is not zero
 
 1.10.0 - 2021-12-16
 * Added Taproot support
